# Named-Entity-Recognition-NER

./: .gitignore  DESIGN.md  LICENSE  PRODUCT.md  README.md  TASKS.md  app.py  pyproject.toml  sample.html
.github/workflows/: ci.yml
scripts/: analyze_boundaries.py  download_glove.py  export_comparison.py  prepare_data.py  train_classical.py  train_transformer.py
src/entitylens/: __init__.py  config.py  data.py  embeddings.py  evaluation.py  inference.py  labels.py  models.py  reproducibility.py  training.py  transformer_training.py
tests/: test_data.py  test_embeddings.py  test_evaluation.py  test_inference.py  test_labels.py  test_models.py  test_prepare_data.py  test_transformer_training.py
