[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "entitylens"
version = "0.1.0"
description = "A reproducible Named Entity Recognition workbench for CoNLL-2003."
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "datasets>=2.19",
    "accelerate>=1.0",
    "numpy>=1.26",
    "pandas>=2.2",
    "plotly>=5.22",
    "seqeval>=1.2.2",
    "streamlit>=1.36",
    "torch>=2.3",
    "pytorch-crf>=0.7.2",
    "transformers>=4.42",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["conll2003.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
